# accessatlas-connector-netbox

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  gunicorn.conf.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
app/: __init__.py  config.py  main.py  models.py  netbox.py  run.py
tests/: test_feed.py
