[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accessatlas-connector-netbox"
version = "0.1.0"
description = "Expose NetBox sites in the Access Atlas site feed format."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Reuben Harris" }]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "gunicorn>=26.0.0,<27.0.0",
  "httpx>=0.28.0,<0.29.0",
  "pydantic-settings>=2.14.1,<3.0.0",
  "uvicorn[standard]>=0.46.0,<0.47.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3,<10.0.0",
  "ruff>=0.15.13,<0.16.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
